Expanded Javadoc for Reflector